Style: completed html and styling for checkout page template and checkout.css file. Also made adjsutements to product.css & cart.css files and got the call to action buttons fixed to the bottom of the screen to make it stand out to the user at all times. eg on indiv_products page, the add to cart form is fixed to the bottom on smaller sized devices so its in thumbs reach at all time and same layout is across all 3 pages

--- a/cart/static/cart/css/cart.css
+++ b/cart/static/cart/css/cart.css
@@ -152,7 +152,8 @@
         background: #ebebeb;
         position: fixed;
         bottom: 0;
-        height: 10vh;
+        height: 100px;
+        min-height: 100px;
     }
 
     .summary-heading,
@@ -167,7 +168,7 @@
     }
 
     .direction-buttons {
-        bottom: 10px;
+        bottom: 18px;
         right: 0;
         width: 100%;
         flex-direction: row;
