--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -32,8 +32,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
-    z-index: 9999;
+    background: rgba(53, 166, 91, 0.84);
+    z-index: 9998;
 }
 
 .loading-spinner {
@@ -42,4 +42,55 @@
     justify-content: center;
     margin: 0;
     height: 100%;
+}
+
+.loading-text {
+    z-index: 9998;
+    text-align: center;
+    position: absolute;
+    top: 65%;
+    width: 100%;
+    font-weight: 600;
+    font-size: 32px;
+}
+
+.total-bottom {
+    margin-bottom: 4rem;
+}
+
+.back-btn {
+    margin: 0;
+}
+
+.form-btns {
+    margin-bottom: 20px;
+}
+
+/* Active for screen sizes under 767px */
+/* Added to remove big white space at bottom of screen on standard iPad due to Bootstrap breakpoints being 1px off */
+@media (max-width: 767px) {
+    .form-btns {
+        border-left: none;
+        border-top: 1px solid black;
+        background: #ebebeb;
+        position: fixed;
+        bottom: 0;
+        height: 10vh;
+        width: 100%;
+        right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: row;
+        min-height: 100px;
+        margin-bottom: 0;
+    }
+}
+
+/* Active for screen sizes under 350px */
+@media (max-width: 350px) {
+    .checkout-btn,
+    .back-btn {
+        font-size: 15px;
+    }
 }
