--- a/products/static/products/css/product.css
+++ b/products/static/products/css/product.css
@@ -291,11 +291,11 @@
         width: 100%;
         left: 0px;
         z-index: 999;
-        height: 10vh;
         border-top: 1px solid black;
         background: #ebebeb;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
+        min-height: 100px;
     }
 
     .add-cart-btn {
